BusOne/src/objects/Veeva_Settings_vod__c.object
<CustomObject>
    <fields>
        <fullName>DEFAULT_ACCOUNT_PROFILE_vod__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Setting for determining default homepage for Account when Account is not flagged as a KOL.
For Commercial CRM:
   •   0 or 2 = Account Detail (default)
   •   1 or 3 = Account Overview Timeline (default)
For Medical CRM:
   •   0 or 1 = Account Overview Timeline (default)
   •   2 or 3 = Account Detail (default)</description>
        <label>Default Account Profile</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DEFAULT_ATTENDEE_RECORD_TYPE_vod__c</fullName>
        <defaultValue>&quot;DEFAULT_ATTENDEE_RECORD_TYPE;;MEDICAL_EVENTS&quot;</defaultValue>
        <description>Name of the Veeva Message which stores the mapping between event record types and attendee record types. Default value is DEFAULT_ATTENDEE_RECORD_TYPE;;MEDICAL_EVENTS.Syntax is MessageName;;MessageCategory</description>
        <label>Default Attendee Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DEFAULT_CALL_RECORD_TYPE_vod__c</fullName>
        <defaultValue>&quot; DEFAULT_CALL_RECORD_TYPE;;Common&quot;</defaultValue>
        <description>References a Veeva message that contains the configuration for setting a default call record type by the account record type of the call. The syntax for the Veeva message is: &lt;ACCOUNT_RECORD_TYPE1&gt;,&lt;CALL_RECORD_TYPE1&gt;;;...
            If there is no call record type provided, the setting is ignored.</description>
        <label>Default Call RecordType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DEFAULT_KOL_PROFILE_vod__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Setting to determine the default page for KOL Profile. This does not apply to the Medical app. 0 is Detail page. 1 is KOL HTML Summary Profile page</description>
        <label>Default KOL Profile</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DEFAULT_vod__c</fullName>
        <defaultValue>&quot;DEFAULT;;MOBILE_CALL_CUSTOM_FIELD&quot;</defaultValue>
        <description>This list of call object field names (e.g. &quot;Ship_Zip_vod, Color_vod&quot;) will be displayed on the PDA call report for the DEFAULT call record type. Similar messages with message names of a Record-Type, e.g. MSL Meeting Brief_vod can also be created.</description>
        <inlineHelpText>List of Call fields to display on the Call Report in the VMobile PDA application for the DEFAULT call record type.</inlineHelpText>
        <label>DEFAULT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DESTINATION_AUTHENTICATION_ENDPOINTS_vod__c</fullName>
        <defaultValue>&quot;DESTINATION_AUTHENTICATION_ENDPOINTS;;Common&quot;</defaultValue>
        <description>References a Veeva message that contains the list of destination endpoints used for Delegated Authentication to log in to other orgs. List of destination endpoints used for Delegated Authentication to log in to other orgs. Syntax is &lt;ENDPOINT NAME&gt;,&lt;AUTH URL&gt;,&lt;APPLIES TO URL&gt;;;</description>
        <inlineHelpText>The ENDPOINT NAME is displayed to end users and cannot include commas or semicolons.</inlineHelpText>
        <label>DESTINATION AUTHENTICATION ENDPOINTS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DISABLE_ACCOUNT_DOWNLOAD_CSV_EXCEL_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, the Download: CSV | Excel link does not appear in My Accounts</description>
        <inlineHelpText>Checking this checkbox suppresses the ability to download Accounts via CSV or Excel data from the My Accounts page.</inlineHelpText>
        <label>Disable Account Download CSV Excel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DISABLE_ALL_ACCOUNTS_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If set to True then the All Accounts option in the territory picklist will be removed if the user is aligned to at least one territory. Default is Unchecked.</description>
        <inlineHelpText>Determines whether the All Accounts option is displayed in the My Accounts page Territory picklist for users aligned to at least one territory.  Default is Unchecked.</inlineHelpText>
        <label>DISABLE_ALL_ACCOUNTS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DISABLE_ALL_MARKETS_IN_ANALYTICS_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true, for Analytics reports online, the &quot;All Markets vs. My Markets&quot; selector is removed and only &quot;My Markets&quot; are shown. Regardless of this setting, the Tablet never displays &quot;All Markets&quot;.  Default value is Unchecked.</description>
        <inlineHelpText>Determines whether the &quot;All Markets&quot; selector is displayed when viewing VInsights reports in the Veeva CRM online application.  Default value is Unchecked.</inlineHelpText>
        <label>DISABLE_ALL_MARKETS_IN_ANALYTICS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DISABLE_BB_OFFLINE_CALL_REPORT_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Blackberry Message to disable offline call report.  If checked the Record Call menu item is not displayed.  Default value is Unchecked.</description>
        <inlineHelpText>Disables offline Call Reporting capabilities in the VMobile BlackBerry application.  Default value is Unchecked.</inlineHelpText>
        <label>DISABLE_BLACKBERRY_OFFLINE_CALL_REPORT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DISABLE_CALL_LOCATION_NONE_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines whether the option of None displays in the Call Location picklist when creating an Individual Call for a Person Account.  Default value is Unchecked.</description>
        <inlineHelpText>Determines whether the option of None displays in the Call Location picklist when creating an Individual Call for a Person Account.  Default value is Unchecked.</inlineHelpText>
        <label>Disable Call Location None</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DISABLE_FIRST_NAME_REQUIRED_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This determines whether the First Name field is required in the New Account Wizard. Default is unchecked, making first name required.</description>
        <label>DISABLE_FIRST_NAME_REQUIRED</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DISABLE_HIERARCHY_AUTOCREATE_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Prevents a child account from being created automatically when creating a new account record using the Record Type Wizard or Parent Account Wizard.  Default value is Unchecked.</description>
        <inlineHelpText>Prevents a child account from being created automatically when creating a new account record using the Record Type Wizard or Parent Account Wizard.  Default value is Unchecked.</inlineHelpText>
        <label>DISABLE_HIERARCHY_AUTOCREATE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DISABLE_MAP_ENTRYPOINTS_vod__c</fullName>
        <defaultValue>&quot;All_vod&quot;</defaultValue>
        <description>This setting will disable entry points into the Account Map page. Disabling multiple entry point should be delimited with a double semi-colon.</description>
        <inlineHelpText>This setting will disable entry points into the Account Map page. Disabling multiple entry point should be delimited with a double semi-colon.</inlineHelpText>
        <label>Disable Map Entry Points</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DISABLE_MASS_UPDATE_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Configurable parameter to prevent display of Mass Update button on My Accounts.
	
	&quot;false&quot; = (Default) Display Mass Update button.
	&quot;true&quot; = Do not display Mass Update button.
	
	TEXT MUST NOT BE TRANSLATED.</description>
        <inlineHelpText>Prevents the display of the Mass Update button in the My Accounts page.  Default value is Unchecked.</inlineHelpText>
        <label>DISABLE_MASS_UPDATE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DISABLE_MI_SIGN_BUTTON_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Disables the Sign button for a Medical Inquiry once a signature has been captured/accepted preventing the user from returning to the Signature page to view or clear the signature.  Default value is Unchecked.</description>
        <inlineHelpText>Disables the Sign button for a Medical Inquiry once a signature has been captured/accepted.  Default value is Unchecked.</inlineHelpText>
        <label>DISABLE_MI_SIGN_BUTTON</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DISABLE_NEW_CALENDAR_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When true, this disables the new calendar and shows the old my schedule in VMobile.</description>
        <inlineHelpText>Determines which version of the My Schedule calendar view is displayed in the VMobile Tablet application.  Default value is Unchecked.</inlineHelpText>
        <label>DISABLE_NEW_CALENDAR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DISABLE_PARENT_WIZARD_ACCT_TYPES_vod__c</fullName>
        <description>This setting designates the account types for which the Parent Account Wizard should not display. Account record types should be entered in a comma delimited list based on the Record Type Label.  For example, Hospital_vod.</description>
        <inlineHelpText>List of the account Record Types for which the Parent Account Wizard should not display.</inlineHelpText>
        <label>DISABLE_PARENT_WIZARD_ACCT_TYPES</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DISABLE_RELATED_LIST_NEW_BUTTON_vod__c</fullName>
        <defaultValue>&quot;DISABLE_RELATED_LIST_NEW_BUTTON;;Common&quot;</defaultValue>
        <description>This setting points to a Veeva message of the same name for disabling new button on related list on iPad.</description>
        <inlineHelpText>Default value: DISABLE_RELATED_LIST_NEW_BUTTON;;Common</inlineHelpText>
        <label>DISABLE RELATED LIST NEW BUTTON</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DISABLE_RM_QUERY_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Configurable parameter to prevent a view from executing for a territory with too many levels.
	
Unchecked = Runs as normal. (Default)
Checked = Only runs view for a territory that is at most one level deep.</description>
        <inlineHelpText>Parameter used to prevent a view from executing for a territory with too many levels.  Default value is Unchecked.</inlineHelpText>
        <label>DISABLE_RM_QUERY</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DISABLE_SAMPLE_RECEIPT_DEFAULT_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines whether the Confirmed Quantity value on a Sample Receipt record is defaulted or if the user is required to enter in the quantity received for each line item.  Default value is Unchecked.</description>
        <inlineHelpText>Determines whether the Confirmed Quantity value on a Sample Receipt record is defaulted or if the user is required to enter in the quantity received for each line item.  Default value is Unchecked.</inlineHelpText>
        <label>DISABLE_SAMPLE_RECEIPT_DEFAULT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DISABLE_SEARCH_TERMS_VOD__c</fullName>
        <defaultValue>&quot;DISABLE_SEARCH_TERMS_VOD;;Common&quot;</defaultValue>
        <description>This holds a list of search terms that would be disabled for the User.
             
             &lt;Object1&gt;.&lt;Field_API_name1&gt;,&lt;Object1&gt;.&lt;Field_API_name2&gt;,&lt;Object2&gt;.&lt;Field_API_name1&gt;...
                 
                 For example: &quot;Account.Account_Identifier,Address_Vod.Phone_1_vod__c&quot; will turn off the ability to search on Account Identifier or Phone 1. This does not remove the field from the results set visibility.</description>
        <label>Disable Search Terms</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DISABLE_SEND_LOG_FILES_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If Checked then the Send Log Files button on the Options dialog on the tablet will be hidden.</description>
        <inlineHelpText>Determines whether the Send Log Files button displays in the Options for the VMobile Tablet application.  Default value is Unchecked.</inlineHelpText>
        <label>DISABLE_SEND_LOG_FILES</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DISABLE_SIGN_BUTTON_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true then the sign button is disabled after a signature is captured.</description>
        <inlineHelpText>If true then the sign button is disabled after a signature is captured.</inlineHelpText>
        <label>DISABLE_SIGN_BUTTON</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DISABLE_TOT_WEEKENDS_vod__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Causes weekend days to be included when placing multi-day TOT records on the calendar. For example, a three-day TOT will show up on three consecutive days regardless of whether one or more of those days are on a weekend. This setting also alters the Average Calls Per Day report in VInsights to ensure TOT hours that falls on weekend days (defined by the SFDC locale) are excluded from the calculation.</description>
        <label>DISABLE_TOT_WEEKENDS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DISABLE_VALIDATION_RULES_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Setting will disable Validation Rules execution across all devices when set to TRUE.</description>
        <label>Disable Validation Rules</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DISCLAIMER_CALL_ACK_vod__c</fullName>
        <defaultValue>&quot;DISCLAIMER_CALL_ACK;;CallReport&quot;</defaultValue>
        <description>References a Veeva message that gets displayed in the call signature page when no samples or details are selected for a call.</description>
        <inlineHelpText>References a Veeva message that gets displayed in the call signature page when no samples or details are selected for a call.</inlineHelpText>
        <label>Disclaimer Call Acknowledgement</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DISCLAIMER_DETAIL_ONLY_vod__c</fullName>
        <defaultValue>&quot;DISCLAIMER_DETAIL_ONLY;;CallReport&quot;</defaultValue>
        <description>The Disclaimer statement text that is displayed in the Call Signature page for a Call Type of Detail-Only when the --sd section signal is configured for the Product Detail section of the Call page layout.</description>
        <inlineHelpText>The Disclaimer statement text that is displayed in the Call Signature page for a Call Type of Detail-Only.</inlineHelpText>
        <label>DISCLAIMER_DETAIL_ONLY</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DISCLAIMER_FONT_SIZE_vod__c</fullName>
        <defaultValue>16</defaultValue>
        <description>Designates the font size of the Disclaimer statement text on the VMobile Tablet Signature page.  Default value is 16.</description>
        <inlineHelpText>Designates the font size of the Disclaimer statement text on the VMobile Tablet Signature page.  Default value is 16.</inlineHelpText>
        <label>DISCLAIMER_FONT_SIZE</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DISCLAIMER_MI_vod__c</fullName>
        <defaultValue>&quot;DISCLAIMER;;MEDICAL_INQUIRY&quot;</defaultValue>
        <description>String used by application.  The Disclaimer statement text that is displayed in the Medical Inquiry Signature page.  Default value is &apos;Enter Disclaimer Text Here&apos;.</description>
        <inlineHelpText>The Disclaimer statement text that is displayed in the Medical Inquiry Signature page.</inlineHelpText>
        <label>DISCLAIMER</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DISCLAIMER_vod__c</fullName>
        <defaultValue>&quot;DISCLAIMER;;CallReport&quot;</defaultValue>
        <description>String used by application. The Disclaimer statement text that is displayed in the Call Signature page.  Default value is &apos;I hereby certify that I have requested the listed Samples and Quantities and all information pertaining to my License is valid and accurate&apos;.</description>
        <inlineHelpText>The Disclaimer statement text that is displayed in the Call Signature page.</inlineHelpText>
        <label>DISCLAIMER</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Call_Address_None_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, the Address field on a new Call will always default to --None-- regardless of whether or not a value exists in the Preferred Address field on the Territory Field object. If the Address field is marked as required, the --None-- value will not be an acceptable value.</description>
        <label>Default Call Address None</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disable_Affiliation_Autocreate_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Prevents the creation of an Affiliation when creating a new account using the New Record Type Wizard or Parent Account Wizard.  Default value is Unchecked.</description>
        <inlineHelpText>Prevents the creation of an Affiliation when creating a new account using the New Record Type Wizard or Parent Account Wizard.  Default value is Unchecked.</inlineHelpText>
        <label>Disable Affiliation Autocreate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disable_Call_DL_By_Visibility_BB_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Disables the download of Account calls recorded by other team members. If checked only Account calls owned by the current user are downloaded to the VMobile BlackBerry application.  Default value is Unchecked.</description>
        <inlineHelpText>Disables the download of Account calls recorded by other team members to the VMobile BlackBerry application. Default value is Unchecked.</inlineHelpText>
        <label>Disable_Call_Download_By_Visibility</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disable_Call_DL_By_Visibility_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked only Account calls owned by the current user are downloaded to the VMobile PDA application.</description>
        <inlineHelpText>If checked only Account calls owned by the current user are downloaded to the VMobile PDA application.</inlineHelpText>
        <label>Disable_Call_Download_By_Visibility</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disable_Call_Datetime_Overwrite_vod__c</fullName>
        <description>On capture of signature, user-entered value of Call Datetime field is not overwritten by the value of Signature Date field.  A value of -1 indicates this setting is disabled.</description>
        <inlineHelpText>On capture of signature, user-entered value of Call Datetime field is not overwritten by the value of Signature Date field.  A value of -1 indicates this setting is disabled.</inlineHelpText>
        <label>Disable Call Datetime Overwrite</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Disable_Edit_Account_Metrics_Tab_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If set to True, Reps cannot edit the Product Group tabs in the Account Ratings and Evaluations section. Default is Unchecked.</description>
        <inlineHelpText>Determines whether Reps cannot edit the Product Group tabs in the Account Ratings and Evaluations section. Default is Unchecked.</inlineHelpText>
        <label>Disable Edit Account Metrics Tab</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disable_Rebate_Mixing_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines whether line level discounts are allowed when free goods are included in the Order Line. Default value is Unchecked.</description>
        <inlineHelpText>Determines whether line level discounts are allowed when free goods are included in the Order Line. Default value is Unchecked.</inlineHelpText>
        <label>Disable Rebate Mixing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disable_iRep_Autosend_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Disable autosend functionality on the iRep platform.</description>
        <label>Disable iRep Autosend</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EDetail_vod__c</fullName>
        <defaultValue>&quot;EDetail;;CallReport&quot;</defaultValue>
        <description>Value displayed in parentheses next to a Detail record on a Call Report to differentiate between electronic and paper details.  For use when detailing via a 3rd party electronic detailing solution.</description>
        <inlineHelpText>Value displayed in parentheses next to a Detail record on a Call Report to differentiate between electronic and paper details.  For use when detailing via a 3rd party electronic detailing solution.</inlineHelpText>
        <label>EDetail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ENABLE_ACCOUNT_PARENT_DISPLAY_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This flag, when true, will enable the display of the Account&apos;s TSF Preferred Location, or the Account&apos;s Primary Parent when available.</description>
        <label>ENABLE_ACCOUNT_PARENT_DISPLAY</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ENABLE_ADV_CYCPLN_SCHEDULING_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enables configurable cycle plan display and sorting in the call schedulers.</description>
        <label>Enable Advanced Cycle Plan Scheduling</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ENABLE_BLACKBERRY_ONLINE_CALL_REPORT_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Blackberry Message to enable online call report.  Default value is Unchecked.</description>
        <inlineHelpText>Enables online Call Reporting for the VMobile BlackBerry application.  Default value is Unchecked.</inlineHelpText>
        <label>ENABLE_BLACKBERRY_ONLINE_CALL_REPORT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ENABLE_BRICK_VINSIGHTS_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enables VInsights sales data analysis at both the Brick and the Account level.  Default value is Unchecked.</description>
        <inlineHelpText>Enables VInsights sales data analysis at both the Brick and the Account level.  Default value is Unchecked.</inlineHelpText>
        <label>ENABLE_BRICK_VINSIGHTS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ENABLE_CALENDAR_AGENDA_VIEW_vod__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Setting to control the visibility of the Agenda in the iRep Calendar.</description>
        <label>Enable Calendar Agenda View</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ENABLE_CALENDAR_MONTH_VIEW_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Makes the Month view visible.</description>
        <inlineHelpText>Makes the Month view visible.</inlineHelpText>
        <label>Enable Calendar Month View</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ENABLE_CALENDAR_WEEK_VIEW_vod__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Setting to control the visibility of the Week view in the iRep calendar.</description>
        <label>Enable Calendar Week View</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ENABLE_CHILD_ACCOUNTS_IN_ANALYTICS_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Designates whether Child Accounts are included in the roll up of data in Analytics.  If Unchecked, Analytics will not use the Child Account object to roll up data within an account hierarchy. If Checked, a nightly process runs against the Child_Account_vod object to create a flattened ID Map (up to five levels deep).  Default value is Unchecked.</description>
        <inlineHelpText>Designates whether Child Accounts are included in the roll up of data in Analytics.  Default value is Unchecked.</inlineHelpText>
        <label>ENABLE_CHILD_ACCOUNTS_IN_ANALYTICS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ENABLE_CHILD_ACCOUNT_IN_WIZARDS_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to enable the display of the Child Account information section in the Account creation wizards.</description>
        <inlineHelpText>Used to enable the display of the Child Account information section in the Account creation wizards.</inlineHelpText>
        <label>Child Account info in Account Wizard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ENABLE_CUSTOM_RELATIONSHIP_FIELDS_vod__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Turns on custom fields in the UI for supported relationship controls. See documentation for more details.</description>
        <label>Enable Custom Relationship Fields</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ENABLE_CYCLE_PLANS_REMAINING_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, the Cycle Plan Target list and the Account Cycle Plan will display a calculation for the remaining number of calls in place of the current attainment percentage.</description>
        <inlineHelpText>If checked, the Cycle Plan Target list and the Account Cycle Plan will display a calculation for the remaining number of calls in place of the current attainment percentage.</inlineHelpText>
        <label>ENABLE_CYCLE_PLANS_REMAINING</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ENABLE_DUAL_LICENSE_CHECK_vod__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Designates whether dual license validation is performed when sampling a controlled substance.  When this setting is Checked, the Physician must have a valid State License for the State in which the controlled substance is being received as well as a valid DEA registration.  Default value is Checked.</description>
        <inlineHelpText>Designates whether dual license validation is performed when sampling a controlled substance. Default value is Checked.</inlineHelpText>
        <label>ENABLE_DUAL_LICENSE_CHECK</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ENABLE_EXPIRATION_FILTER_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Prevents expired Sample Lots from displaying in the Lot # picklist when creating a Call Report. If set to Checked, then all Sample Lots that have an Expiration Date that is prior to Today’s date will not be available for selection. Default value is Unchecked.</description>
        <inlineHelpText>Prevents expired Sample Lots from displaying in the Lot # picklist when creating a Call Report.  Default Value is Unchecked.</inlineHelpText>
        <label>ENABLE_EXPIRATION_FILTER</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ENABLE_EXTERNAL_CALENDARS_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allows users to view events from iPad calendars within iRep</description>
        <label>ENABLE_EXTERNAL_CALENDARS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ENABLE_FLASH_CHARTS_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines whether Flash based charts or native WPF charts will be displayed in the VMobile Tablet application. Default value is Unchecked.  It is recommended to use the native WPF charts.</description>
        <inlineHelpText>Determines whether Flash based charts or native WPF charts will be displayed in the VMobile Tablet application. Default value is Unchecked.</inlineHelpText>
        <label>ENABLE_FLASH_CHARTS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ENABLE_GROUP_FILTERING_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If set to true then AccountShare, Groups and TSF will be filtered by user territories when syncing.</description>
        <inlineHelpText>If set to true then AccountShare, Groups and TSF will be filtered by user territories when syncing.</inlineHelpText>
        <label>ENABLE_GROUP_FILTERING</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ENABLE_INVENTORY_WORKSHEET_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines whether the Print Inventory Worksheet link is displayed on the My Samples page.  Default value is Unchecked.</description>
        <inlineHelpText>Determines whether the Print Inventory Worksheet link is displayed on the My Samples page.  Default value is Unchecked.</inlineHelpText>
        <label>ENABLE_INVENTORY_WORKSHEET</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ENABLE_IPAD_MYSAMPLES_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>checkbox setting which controls if my samples tab is shown on iRep</description>
        <label>ENABLE_IPAD_MYSAMPLES</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ENABLE_LICENSE_EXP_DATE_BYPASS_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Designates whether the License Expiration Date validation should be bypassed to allow for one-time sample disbursements.  Default value is Unchecked.</description>
        <inlineHelpText>Designates whether the License Expiration Date validation should be bypassed to allow for one-time sample disbursements.  Default value is Unchecked.</inlineHelpText>
        <label>ENABLE_LICENSE_EXP_DATE_BYPASS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ENABLE_LIST_SCHEDULER_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For Japanese customers, enables productive call scheduling.</description>
        <inlineHelpText>For Japanese customers, enables productive call scheduling.</inlineHelpText>
        <label>ENABLE_LIST_SCHEDULER</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ENABLE_LOCATION_SERVICES_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enables location-based functionality.</description>
        <label>Enable Location Services</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ENABLE_MYSAMPLES_LOGIN_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enables a User Lookup field on the My Samples page allowing Manager&apos;s and Administrators to view the My Samples page of another User.</description>
        <inlineHelpText>Enables a User Lookup field on the My Samples page allowing Manager&apos;s and Administrators to view the My Samples page of another User.</inlineHelpText>
        <label>ENABLE_MYSAMPLES_LOGIN</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ENABLE_MYSCHEDULE_CALL_LOCATION_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Remove the display of Address from My Schedule and replace with Read-Only Call Location. Default is false.</description>
        <label>ENABLE_MYSCHEDULE_CALL_LOCATION</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ENABLE_NEG_SAMPLE_INDICATOR_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enables the display of an indicator when a sample drop or transfer will result in a negative balance of inventory for a given sample lot. Default value is Unchecked.</description>
        <inlineHelpText>Enables the display of an indicator when a sample drop or transfer will result in a negative balance of inventory for a given sample lot. Default value is Unchecked.</inlineHelpText>
        <label>ENABLE_NEG_SAMPLE_INDICATOR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ENABLE_NEW_CALENDAR_ONLINE_vod__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Enables the My Schedule interactive calendar functionality such as drag and drop, tool tip display, etc. in Veeva CRM online application. Default value is Checked.</description>
        <inlineHelpText>Enables the My Schedule interactive calendar functionality such as drag and drop, tool tip display, etc. in Veeva CRM online application. Default value is Checked.</inlineHelpText>
        <label>ENABLE_NEW_CALENDAR_ONLINE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ENABLE_NEW_IPAD_CALENDAR_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable the new calendar and scheduler for the iPad.</description>
        <label>Enable New iPad Calendar</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>